--- a/IcVibracoes/Properties/launchSettings.json
+++ b/IcVibracoes/Properties/launchSettings.json
@@ -3,8 +3,7 @@
   "profiles": {
     "IcVibracoes": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
