--- a/IcVibracoes.Core/IcVibracoes.Core.csproj
+++ b/IcVibracoes.Core/IcVibracoes.Core.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\IcVibracoes.DataContracts\IcVibracoes.DataContracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\InputData\RigidBody\" />
+  </ItemGroup>
+
 </Project>
