--- a/IcVibracoes.DataContracts/IcVibracoes.DataContracts.csproj
+++ b/IcVibracoes.DataContracts/IcVibracoes.DataContracts.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>IcVibracoes.DataContracts.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\IcVibracoes.Common\IcVibracoes.Common.csproj" />
   </ItemGroup>
