--- a/IcVibracoes.Test/IcVibracoes.Test.csproj
+++ b/IcVibracoes.Test/IcVibracoes.Test.csproj
@@ -7,6 +7,36 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Core\Calculator\DifferentialEquationOfMotion\**" />
+    <Compile Remove="Core\Calculator\Eigenvalue\**" />
+    <Compile Remove="Core\Calculator\Force\**" />
+    <Compile Remove="Core\Calculator\NaturalFrequency\**" />
+    <Compile Remove="Core\Calculator\Time\**" />
+    <Compile Remove="Core\ExtensionMethods\**" />
+    <Compile Remove="Core\Mapper\**" />
+    <Compile Remove="Core\NumericalIntegrationMethods\**" />
+    <Compile Remove="Core\Validators\**" />
+    <EmbeddedResource Remove="Core\Calculator\DifferentialEquationOfMotion\**" />
+    <EmbeddedResource Remove="Core\Calculator\Eigenvalue\**" />
+    <EmbeddedResource Remove="Core\Calculator\Force\**" />
+    <EmbeddedResource Remove="Core\Calculator\NaturalFrequency\**" />
+    <EmbeddedResource Remove="Core\Calculator\Time\**" />
+    <EmbeddedResource Remove="Core\ExtensionMethods\**" />
+    <EmbeddedResource Remove="Core\Mapper\**" />
+    <EmbeddedResource Remove="Core\NumericalIntegrationMethods\**" />
+    <EmbeddedResource Remove="Core\Validators\**" />
+    <None Remove="Core\Calculator\DifferentialEquationOfMotion\**" />
+    <None Remove="Core\Calculator\Eigenvalue\**" />
+    <None Remove="Core\Calculator\Force\**" />
+    <None Remove="Core\Calculator\NaturalFrequency\**" />
+    <None Remove="Core\Calculator\Time\**" />
+    <None Remove="Core\ExtensionMethods\**" />
+    <None Remove="Core\Mapper\**" />
+    <None Remove="Core\NumericalIntegrationMethods\**" />
+    <None Remove="Core\Validators\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
@@ -29,16 +59,6 @@
     <Folder Include="Core\Calculator\MainMatrix\BeamWithDvas\" />
     <Folder Include="Core\Calculator\MainMatrix\BeamWithPiezoelectrics\" />
     <Folder Include="Core\Calculator\MainMatrix\Beam\" />
-    <Folder Include="Core\Calculator\DifferentialEquationOfMotion\" />
-    <Folder Include="Core\Calculator\Eigenvalue\" />
-    <Folder Include="Core\Calculator\Force\" />
-    <Folder Include="Core\Calculator\NaturalFrequency\" />
-    <Folder Include="Core\Calculator\Time\" />
-    <Folder Include="Core\ExtensionMethods\" />
-    <Folder Include="Core\Mapper\" />
-    <Folder Include="Core\NumericalIntegrationMethods\RungeKuttaForthOrder\" />
-    <Folder Include="Core\NumericalIntegrationMethods\NewmarkBeta\" />
-    <Folder Include="Core\NumericalIntegrationMethods\Newmark\" />
     <Folder Include="Core\Operations\CalculateVibration\FiniteElement\BeamWithDva\Circular\" />
     <Folder Include="Core\Operations\CalculateVibration\FiniteElement\BeamWithDva\Rectangular\" />
     <Folder Include="Core\Operations\CalculateVibration\FiniteElement\BeamWithPiezoelectric\Circular\" />
@@ -47,9 +67,6 @@
     <Folder Include="Core\Operations\CalculateVibration\FiniteElement\Beam\Rectangular\" />
     <Folder Include="Core\Operations\CalculateVibration\RigidBody\TwoDegreeOfFreedom\" />
     <Folder Include="Core\Operations\CalculateVibration\RigidBody\OneDegreeOfFreedom\" />
-    <Folder Include="Core\Validators\MechanicalProperties\" />
-    <Folder Include="Core\Validators\TimeStep\" />
-    <Folder Include="Core\Validators\Profiles\" />
   </ItemGroup>
 
 </Project>
