--- a/IcVibracoes/Properties/launchSettings.json
+++ b/IcVibracoes/Properties/launchSettings.json
@@ -1,12 +1,12 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IcVibracoes": {
       "commandName": "Project",
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
