--- a/Formula and Baja SAE/Suspension/src/Suspension.Application/MudRunner.Suspension.Application.csproj
+++ b/Formula and Baja SAE/Suspension/src/Suspension.Application/MudRunner.Suspension.Application.csproj
@@ -1,17 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<LangVersion>preview</LangVersion>
-		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="MudRunner.Commons.Application" Version="1.6.2" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.2.3" />
-	</ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<ItemGroup>
 		<ProjectReference Include="..\Suspension.Core\MudRunner.Suspension.Core.csproj" />
