--- a/Formula and Baja SAE/Suspension/src/Suspension.Core/MudRunner.Suspension.Core.csproj
+++ b/Formula and Baja SAE/Suspension/src/Suspension.Core/MudRunner.Suspension.Core.csproj
@@ -1,14 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<LangVersion>preview</LangVersion>
-		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-	</PropertyGroup>
-
 	<ItemGroup>
-		<PackageReference Include="MudRunner.Commons.Core" Version="1.6.2" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="MelloSilveiraTools" Version="1.2.0-rc03" />
 	</ItemGroup>
 
 	<ItemGroup>
