--- a/Formula and Baja SAE/Suspension/src/Suspension.DataContracts/MudRunner.Suspension.DataContracts.csproj
+++ b/Formula and Baja SAE/Suspension/src/Suspension.DataContracts/MudRunner.Suspension.DataContracts.csproj
@@ -1,18 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<LangVersion>preview</LangVersion>
-		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-	</PropertyGroup>
-
 	<ItemGroup>
 	  <None Remove="packages.config" />
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <PackageReference Include="MudRunner.Commons.DataContracts" Version="1.6.2" />
-	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	  <PackageReference Include="MelloSilveiraTools" Version="1.2.0-rc03" />
 	</ItemGroup>
-
+	
 </Project>
