--- a/Formula and Baja SAE/Suspension/Directory.Build.props
+++ b/Formula and Baja SAE/Suspension/Directory.Build.props
@@ -5,12 +5,12 @@
 		<Product>MudRunner.Suspension</Product>
 		<AssemblyTitle>Mud Runner - Suspension</AssemblyTitle>
 		<Description>Application responsible to execute routines evolving the suspension system.</Description>
-		<Company>MudRunner</Company>
-		<Copyright>MudRunner - Copyright © 2021</Copyright>
+		<Company>MelloSilveira LTDA</Company>
+		<Copyright>MelloSilveira LTDA - Copyright © 2021</Copyright>
 		<NeutralLanguage>en-us</NeutralLanguage>
 		<RepositoryType>git</RepositoryType>
-		<RepositoryUrl>https://github.com/M3110/MudRunner</RepositoryUrl>
-		<VersionPrefix>1.4.1</VersionPrefix>
+		<RepositoryUrl>https://github.com/mellosilveira/ScientificInitiations</RepositoryUrl>
+		<VersionPrefix>1.0.0</VersionPrefix>
 
 		<!-- Setup initial variables if not defined. -->
 		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
